--- a/builder-config.yaml
+++ b/builder-config.yaml
@@ -1,24 +1,18 @@
 dist:
   name: otelcol-custom
   description: Custom OpenTelemetry Collector
-  version: 0.91.0
-  otelcol_version: 0.91.0
+  output_path: ./dist
 
 exporters:
-  - gomod: go.opentelemetry.io/collector/exporter/loggingexporter v0.91.0
-  - gomod: go.opentelemetry.io/collector/exporter/otlpexporter v0.91.0
-  - gomod: go.opentelemetry.io/collector/exporter/otlphttpexporter v0.91.0
+  - gomod: go.opentelemetry.io/collector/exporter/debugexporter v0.126.0
+  - gomod: go.opentelemetry.io/collector/exporter/otlpexporter v0.126.0
 
 processors:
-  - gomod: go.opentelemetry.io/collector/processor/batchprocessor v0.91.0
-  - gomod: go.opentelemetry.io/collector/processor/memorylimiterprocessor v0.91.0
+  - gomod: go.opentelemetry.io/collector/processor/batchprocessor v0.126.0
 
 receivers:
-  - gomod: go.opentelemetry.io/collector/receiver/otlpreceiver v0.91.0
+  - gomod: go.opentelemetry.io/collector/receiver/otlpreceiver v0.126.0
 
-connectors:
-  - gomod: go.opentelemetry.io/collector/connector/forwardconnector v0.91.0
-
-extensions:
-  - gomod: go.opentelemetry.io/collector/extension/healthcheckextension v0.91.0
-  - gomod: go.opentelemetry.io/collector/extension/pprofextension v0.91.0
+providers:
+  - gomod: go.opentelemetry.io/collector/confmap/provider/envprovider v1.18.0
+  - gomod: go.opentelemetry.io/collector/confmap/provider/fileprovider v1.18.0
