--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,8 @@
-name: Release
+name: Build and Release
 
 on:
+  pull_request:
+    branches: [ main ]
   push:
     tags:
       - 'v*'
@@ -71,6 +73,7 @@ jobs:
     name: Create Release
     needs: build
     runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/v')
     
     steps:
       - name: Checkout code
