first pass w/ Claude to create debian package

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,11 @@ jobs:
         with:
           go-version: '1.23'
 
+      - name: Install Debian packaging tools
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y dpkg-dev
+
       - name: Generate collector code
         run: |
           go run go.opentelemetry.io/collector/cmd/builder@latest --config builder-config.yaml
@@ -47,18 +52,17 @@ jobs:
           cd dist
           go build -ldflags="-s -w" -o ../otelcol-custom-${{ matrix.suffix }} .
 
-      - name: Create tarball
+      - name: Create Debian package
         run: |
-          tar -czf otelcol-custom-${{ matrix.suffix }}.tar.gz otelcol-custom-${{ matrix.suffix }}
-          sha256sum otelcol-custom-${{ matrix.suffix }}.tar.gz > otelcol-custom-${{ matrix.suffix }}.tar.gz.sha256
+          ./build-deb.sh otelcol-custom-${{ matrix.suffix }} ${{ matrix.goarch }}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: otelcol-custom-${{ matrix.suffix }}
           path: |
-            otelcol-custom-${{ matrix.suffix }}.tar.gz
-            otelcol-custom-${{ matrix.suffix }}.tar.gz.sha256
+            otelcol-custom_1.0.0_${{ matrix.goarch }}.deb
+            otelcol-custom_1.0.0_${{ matrix.goarch }}.deb.sha256
 
   release:
     name: Create Release
@@ -78,7 +82,7 @@ jobs:
       - name: Prepare release assets
         run: |
           mkdir -p release-assets
-          find artifacts -name "*.tar.gz*" -exec cp {} release-assets/ \;
+          find artifacts -name "*.deb*" -exec cp {} release-assets/ \;
           ls -la release-assets/
 
       - name: Extract version from tag
@@ -95,19 +99,19 @@ jobs:
             ### Downloads
             
             #### Linux AMD64
-            - [otelcol-custom-linux-amd64.tar.gz](https://github.com/${{ github.repository }}/releases/download/${{ steps.version.outputs.version }}/otelcol-custom-linux-amd64.tar.gz)
-            - [SHA256](https://github.com/${{ github.repository }}/releases/download/${{ steps.version.outputs.version }}/otelcol-custom-linux-amd64.tar.gz.sha256)
+            - [otelcol-custom_1.0.0_amd64.deb](https://github.com/${{ github.repository }}/releases/download/${{ steps.version.outputs.version }}/otelcol-custom_1.0.0_amd64.deb)
+            - [SHA256](https://github.com/${{ github.repository }}/releases/download/${{ steps.version.outputs.version }}/otelcol-custom_1.0.0_amd64.deb.sha256)
             
             #### Linux ARM64
-            - [otelcol-custom-linux-arm64.tar.gz](https://github.com/${{ github.repository }}/releases/download/${{ steps.version.outputs.version }}/otelcol-custom-linux-arm64.tar.gz)
-            - [SHA256](https://github.com/${{ github.repository }}/releases/download/${{ steps.version.outputs.version }}/otelcol-custom-linux-arm64.tar.gz.sha256)
+            - [otelcol-custom_1.0.0_arm64.deb](https://github.com/${{ github.repository }}/releases/download/${{ steps.version.outputs.version }}/otelcol-custom_1.0.0_arm64.deb)
+            - [SHA256](https://github.com/${{ github.repository }}/releases/download/${{ steps.version.outputs.version }}/otelcol-custom_1.0.0_arm64.deb.sha256)
             
             ### Installation
             
-            1. Download the appropriate binary for your architecture
-            2. Extract: `tar -xzf otelcol-custom-<arch>.tar.gz`
-            3. Make executable: `chmod +x otelcol-custom-<arch>`
-            4. Run: `./otelcol-custom-<arch> --config=config.yaml`
+            1. Download the appropriate .deb package for your architecture
+            2. Install: `sudo dpkg -i otelcol-custom_1.0.0_<arch>.deb`
+            3. The service will be automatically enabled and started
+            4. Check status: `sudo systemctl status otelcol-custom`
           files: release-assets/*
           draft: false
           prerelease: false
