--- a/otelcol-custom.conf
+++ b/otelcol-custom.conf
@@ -7,3 +7,5 @@ OTELCOL_OPTIONS="--config=/etc/otelcol-custom/config.yaml"
 # MOUNT_POINTS="['/', '/var/log']"
 # NETWORK_INTERFACES="['eth1']"
 # DASH0_API_KEY="Bearer <key here>"
+METRICS_SCRAPE_INTERVAL="30s"
+METRICS_BATCH_INTERVAL="15m"
