--- a/otelcol-custom.conf
+++ b/otelcol-custom.conf
@@ -7,6 +7,6 @@ OTELCOL_OPTIONS="--config=/etc/otelcol-custom/config.yaml"
 # MOUNT_POINTS="['/', '/var/log']"
 # NETWORK_INTERFACES="['eth1']"
 # DASH0_API_KEY="Bearer <key here>"
-# SITE_NAME="bendlab-uc2200a"
+# SITE_NAME="<customer-site>"
 METRICS_SCRAPE_INTERVAL="30s"
 METRICS_BATCH_INTERVAL="15m"
