--- a/config.yaml
+++ b/config.yaml
@@ -61,11 +61,11 @@ receivers:
         metrics:
           process.cpu.utilization:
             enabled: true
+          process.memory.usage:
+            enabled: true
           process.cpu.time:
             enabled: false
           process.disk.io:
-            enabled: false
-          process.memory.usage:
             enabled: false
           process.memory.virtual:
             enabled: false
