--- a/config.yaml
+++ b/config.yaml
@@ -23,7 +23,7 @@ service:
     
     metrics/batt-edge:
       receivers: [prometheus]
-      processors: [batch/logs]
+      processors: [batch/metrics]
       exporters: [otlphttp/dash0/metrics]
 
 
@@ -87,7 +87,7 @@ receivers:
     config:
       scrape_configs:
         - job_name: 'edge-metrics'
-          scrape_interval: 5s
+          scrape_interval: ${env:METRICS_SCRAPE_INTERVAL}
           static_configs:
             - targets: ['127.0.0.1:9000']
           metrics_path: '/metrics'
