--- a/otelcol-custom.conf
+++ b/otelcol-custom.conf
@@ -3,6 +3,8 @@
 # Command-line options for the otelcol-contrib service.
 # Run `/usr/bin/otelcol-contrib --help` to see all available options.
 OTELCOL_OPTIONS="--config=/etc/otelcol-custom/config.yaml"
+PROMETHEUS_EXPORTER_ENDPOINT="0.0.0.0:9464"
+
 
 # MOUNT_POINTS="['/', '/var/log']"
 # NETWORK_INTERFACES="['eth1']"
