--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,30 @@ permissions:
   contents: write
 
 jobs:
+  validate:
+    name: Validate Configuration
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.25'
+
+      - name: Validate collector configuration
+        run: |
+          METRICS_SCRAPE_INTERVAL=60s \
+          NETWORK_INTERFACES='["eth0"]' \
+          MOUNT_POINTS='["/"]' \
+          METRICS_BATCH_INTERVAL=200ms \
+          SITE_NAME='example-site' \
+          DASH0_API_KEY='placeholder' \
+          
+          go run go.opentelemetry.io/collector/cmd/builder@latest --config builder-config.yaml --validate
+
   build:
     name: Build and Package
     runs-on: ubuntu-latest
