--- a/otelcol-custom.conf
+++ b/otelcol-custom.conf
@@ -3,12 +3,13 @@
 # Command-line options for the otelcol-contrib service.
 # Run `/usr/bin/otelcol-contrib --help` to see all available options.
 OTELCOL_OPTIONS="--config=/etc/otelcol-custom/config.yaml"
-PROMETHEUS_EXPORTER_ENDPOINT="0.0.0.0:9464"
 
-
+# Optional environment variables. Uncomment and customize as needed:
 # MOUNT_POINTS="['/', '/var/log']"
 # NETWORK_INTERFACES="['eth1']"
 # DASH0_API_KEY="Bearer <key here>"
 # SITE_NAME="<customer-site>"
+
+# Metrics configuration
 METRICS_SCRAPE_INTERVAL="30s"
 METRICS_BATCH_INTERVAL="15m"
