Update Prometheus exporter endpoint to use environment variable

--- a/config.yaml
+++ b/config.yaml
@@ -182,7 +182,7 @@ exporters:
     encoding: json
 
   prometheus:
-    endpoint: "0.0.0.0:8889"
+    endpoint: ${env:PROMETHEUS_EXPORTER_ENDPOINT}
 
   debug:
     verbosity: normal
