--- a/otelcol-custom.conf
+++ b/otelcol-custom.conf
@@ -13,3 +13,4 @@ OTELCOL_OPTIONS="--config=/etc/otelcol-custom/config.yaml"
 # Metrics configuration
 METRICS_SCRAPE_INTERVAL="30s"
 METRICS_BATCH_INTERVAL="15m"
+PROMETHEUS_EXPORTER_ENDPOINT="0.0.0.0:8889"
