--- a/config.yaml
+++ b/config.yaml
@@ -16,10 +16,15 @@ service:
       processors: [transform/edge_remap, batch/logs]
       exporters: [otlphttp/dash0/logs]
 
-    metrics:
+    metrics/system:
       receivers: [hostmetrics]
       processors: [filter/cpu_mode, filter/process_cpu_mode, metricstransform/aggregate_cpu, attributes/add_site_name, batch/metrics]
       exporters: [otlphttp/dash0/metrics, prometheus]
+
+    metrics/batt-edge:
+      receivers: [prometheus]
+      processors: [batch/metrics]
+      exporters: [otlphttp/dash0/metrics]
 
 receivers:
   journald:
@@ -76,6 +81,14 @@ receivers:
             enabled: true
           system.cpu.time:
             enabled: false
+
+  prometheus:
+    config:
+      scrape_configs:
+        - job_name: batt-edge
+          scrape_interval: ${env:METRICS_SCRAPE_INTERVAL}
+          static_configs:
+            - targets: ${env:PROMETHEUS_TARGETS}
 
 connectors:
   routing:
