--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,7 @@ jobs:
           go build -ldflags="-s -w" -o ../otelcol-custom .
 
       - name: Validate config.yaml for otelcol-custom
+        if: matrix.goarch == 'amd64'
         run: |
           export METRICS_SCRAPE_INTERVAL=60s
           export NETWORK_INTERFACES='["eth0"]'
