--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Build and Release
+name: CI
 
 on:
   pull_request:
@@ -12,7 +12,7 @@ permissions:
 
 jobs:
   build:
-    name: Build and Release
+    name: Build and Package
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -26,12 +26,12 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v6
         with:
-          go-version: '1.23'
+          go-version: '1.25'
 
       - name: Install Debian packaging tools
         run: |
@@ -50,6 +50,18 @@ jobs:
         run: |
           cd dist
           go build -ldflags="-s -w" -o ../otelcol-custom .
+
+      - name: Validate config.yaml for otelcol-custom
+        # Only run validation for amd64 builds, since verifying it against ARM binaries wouldn't work on GH's x86 runners.
+        if: matrix.goarch == 'amd64'
+        run: |
+          export METRICS_SCRAPE_INTERVAL=60s
+          export NETWORK_INTERFACES='["eth0"]'
+          export MOUNT_POINTS='["/"]'
+          export METRICS_BATCH_INTERVAL=200ms
+          export SITE_NAME='example-site'
+          export DASH0_API_KEY='placeholder'
+          ./otelcol-custom --config config.yaml validate
 
       - name: Create Debian package
         run: |
@@ -70,7 +82,7 @@ jobs:
             otelcol-custom_*_${{ matrix.goarch }}.deb.sha256
 
   release:
-    name: Create Release
+    name: Release
     needs: build
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v')
@@ -94,7 +106,7 @@ jobs:
         id: version
         run: echo "version=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
 
-      - name: Create Release
+      - name: Release
         uses: softprops/action-gh-release@v1
         with:
           name: Release ${{ steps.version.outputs.version }}
