--- a/otelcol-custom.conf
+++ b/otelcol-custom.conf
@@ -4,9 +4,14 @@
 # Run `/usr/bin/otelcol-contrib --help` to see all available options.
 OTELCOL_OPTIONS="--config=/etc/otelcol-custom/config.yaml"
 
+# The commented env vars below are REQUIRED for field sites
+# look at the site-setup repository for instructions
 # MOUNT_POINTS="['/', '/var/log']"
 # NETWORK_INTERFACES="['eth1']"
 # DASH0_API_KEY="Bearer <key here>"
 # SITE_NAME="<customer-site>"
+
+# Metrics configuration
 METRICS_SCRAPE_INTERVAL="30s"
 METRICS_BATCH_INTERVAL="15m"
+PROMETHEUS_EXPORTER_ENDPOINT="0.0.0.0:8889"
