Attempt to fix CI

--- a/otelcol-custom.conf
+++ b/otelcol-custom.conf
@@ -15,3 +15,4 @@ OTELCOL_OPTIONS="--config=/etc/otelcol-custom/config.yaml"
 METRICS_SCRAPE_INTERVAL="30s"
 METRICS_BATCH_INTERVAL="15m"
 PROMETHEUS_EXPORTER_ENDPOINT="0.0.0.0:8889"
+PROMETHEUS_TARGETS='["127.0.0.1:9000"]'
