--- a/builder-config.yaml
+++ b/builder-config.yaml
@@ -6,6 +6,7 @@ dist:
 exporters:
   - gomod: go.opentelemetry.io/collector/exporter/debugexporter v0.138.0
   - gomod: go.opentelemetry.io/collector/exporter/otlphttpexporter v0.138.0
+  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/exporter/prometheusexporter v0.137.0
 
 processors:
   - gomod: go.opentelemetry.io/collector/processor/batchprocessor v0.138.0
